; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ahci/extr_ahci.c_ahci_detached.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ahci/extr_ahci.c_ahci_detached.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahci_channel = type { i64, i32 }
%struct.ahci_controller = type { i32, i32** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ahci_detached(i32 %0, %struct.ahci_channel* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ahci_channel*, align 8
  %5 = alloca %struct.ahci_controller*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.ahci_channel* %1, %struct.ahci_channel** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.ahci_controller* @device_get_softc(i32 %6)
  store %struct.ahci_controller* %7, %struct.ahci_controller** %5, align 8
  %8 = load %struct.ahci_controller*, %struct.ahci_controller** %5, align 8
  %9 = getelementptr inbounds %struct.ahci_controller, %struct.ahci_controller* %8, i32 0, i32 0
  %10 = call i32 @mtx_lock(i32* %9)
  %11 = load %struct.ahci_channel*, %struct.ahci_channel** %4, align 8
  %12 = getelementptr inbounds %struct.ahci_channel, %struct.ahci_channel* %11, i32 0, i32 1
  %13 = call i32 @mtx_lock(i32* %12)
  %14 = load %struct.ahci_controller*, %struct.ahci_controller** %5, align 8
  %15 = getelementptr inbounds %struct.ahci_controller, %struct.ahci_controller* %14, i32 0, i32 1
  %16 = load i32**, i32*** %15, align 8
  %17 = load %struct.ahci_channel*, %struct.ahci_channel** %4, align 8
  %18 = getelementptr inbounds %struct.ahci_channel, %struct.ahci_channel* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = getelementptr inbounds i32*, i32** %16, i64 %19
  store i32* null, i32** %20, align 8
  %21 = load %struct.ahci_channel*, %struct.ahci_channel** %4, align 8
  %22 = getelementptr inbounds %struct.ahci_channel, %struct.ahci_channel* %21, i32 0, i32 1
  %23 = call i32 @mtx_unlock(i32* %22)
  %24 = load %struct.ahci_controller*, %struct.ahci_controller** %5, align 8
  %25 = getelementptr inbounds %struct.ahci_controller, %struct.ahci_controller* %24, i32 0, i32 0
  %26 = call i32 @mtx_unlock(i32* %25)
  ret void
}

declare dso_local %struct.ahci_controller* @device_get_softc(i32) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
